--- a/index.pug
+++ b/index.pug
@@ -4,7 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         title Продвинутая верстка джс 3: сайт на Pug
-        link(rel="stylesheet" href="style.css")
+        link(rel="stylesheet" href="css/style.css")
     body
         -var games = [{title: 'RDR 2', releaseDate: '26.10.2018'}, {title: 'Minecraft', releaseDate: '18.11.2011'}, {title: 'Portal 1', releaseDate: '10.10.2007'}, {title: 'half-Life 2', releaseDate: '16.11.2004'}, {title: 'Left 4 Dead 2', releaseDate: '17.11.2009'}, {title: 'Party Hard', releaseDate: '25.08.2015'}, {title: 'People Playground', releaseDate: '23.07.2019'}, {title: 'Crypto Mining Simulator', releaseDate: 'В разработке'}]
 
