--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ ul {
 	justify-content: space-around;
 }
 
-.grid_item {
+.grid__item {
 	width: 295px;
 	margin-bottom: 25px;
 }
@@ -108,12 +108,12 @@ ul {
 	.container {
 		width: 90%;
 	}
-	.grid_item {
+	.grid__item {
 		flex-basis: 50%;
 	}
 }
 @media(min-width: 768px) {
-	.grid_item {
+	.grid__item {
 		flex-basis: 45%;
 		justify-content: center;
 	}
@@ -122,12 +122,12 @@ ul {
 	.container {
 		width: 80%;
 	}
-	.grid_item {
+	.grid__item {
 		flex-basis: 30%;
 	}
 }
 @media(min-width: 1280px) {
-	.grid_item {
+	.grid__item {
 		flex-basis: 25%;
 	}
 }
@@ -135,7 +135,7 @@ ul {
 	.container {
 		width: 70%;
 	}
-	.grid_item {
+	.grid__item {
 		flex-basis: 23%;
 	}
 }
